--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,11 +10,11 @@ html(lang="en")
         header
             h1 Noom
         main
-            form
-                input(type="text", placeholder="write a msg", required)
+            form#nickname
+                input(type="text", placeholder="Chosee a nick name", required)
                 button Send
             ul
-            form
+            form#message
                 input(type="text", placeholder="write a msg", required)
                 button Send
         script(src="public/js/app.js")
