--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -15,6 +15,8 @@ html(lang="en")
                     input(placeholder="room name", name="room",required, type="text")
                     input(placeholder="nickname", name="nickname",required, type="text")
                     button Enter Room 
+                h4  Open Rooms:
+                ul
             div#room
                 h3
                 ul
