--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -23,5 +23,5 @@ html(lang="en")
                 form#msg
                     input(placeholder="message", required, type="text")
                     button Send
-        script(src="/socket.io/socket.io.js")
-        script(src="public/js/app.js")
+        //- script(src="/socket.io/socket.io.js")
+        //- script(src="/public/js/app.js")
